# Shop-Simulator

./: .gitignore  ArchitectureUML.mdj  CMakeLists.txt  Readme
assets/files/: ZonesMap.txt
include/: Renderable.hpp  definitions.hpp  dep.hpp
include/UI/: Button.hpp  ScrollBar.hpp
include/gameLogick/: Bot.hpp  ControlPanel.hpp  GameField.hpp  GameScreen.hpp  Screen.hpp  SettingsScreen.hpp  StartScreen.hpp  Tile.hpp
include/loaders/: AssetsManager.hpp
src/: Launcher.cpp
src/UI/: Button.cpp  ScrollBar.cpp
src/gameLogick/: Bot.cpp  ControlPanel.cpp  GameField.cpp  GameScreen.cpp  Screen.cpp  SettingsScreen.cpp  StartScreen.cpp  Tile.cpp
src/loaders/: AssetsManager.cpp
